[package]
name = "real-estate"
version = "0.1.0"
description = "Real Estate Tokenization on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "real_estate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.1.2", features = ["token", "associated_token", "metadata"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }